# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Improve Python 3 support in the Python CloudI API
      by avoiding a failure when checking string types

2018-04-11 Michael Truog   <mjtruog at protonmail dot com>

    * Update all the Python source code based on pylint

2018-04-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add the checksum argument to cloudi_service_queue so a
      checksum may be stored with each data chunk

2018-04-08 Michael Truog   <mjtruog at protonmail dot com>

    * Require service requests using a cloudi_service_router ssh
      connection to have a timeout of at least FORWARD_DELTA
    * Update nodefinder

2018-04-07 Michael Truog   <mjtruog at protonmail dot com>

    * Change unknown call/cast/info Erlang message handling to
      use the same mechanism everywhere:
        * Use "Unknown _ \"~w\"" as an Erlang string stop reason
    * Fix all internal services so cloudi_service_terminate/3
      can accept a State variable as undefined, which occurs when
      cloudi_service_init/4 throws an exception
      (This is different from Erlang/OTP behaviours
       (they do not call terminate/2 if init/1 had an exception)
       because it allows easy handling of external state at termination,
       if any was partially initialized and to be consistent with
       external services (execution after poll is termination).)
    * Fix removal of pretty-printing of the cloudi_service_api_requests
      response (which changed in the 1.7.3 release when fixing unicode
      support in the cloudi_string module)
    * Allow environment variable use in the CloudI Service API
      nodes_set discovery ec2 options:
      access_key_id, secret_access_key, host
    * Update cpg, supool, nodefinder

2018-04-06 Michael Truog   <mjtruog at protonmail dot com>

    * Add ssh connectivity to cloudi_service_router
