@@ -4,7 +4,7 @@
 #
 # MIT License
 #
-# Copyright (c) 2014-2017 Michael Truog <mjtruog at protonmail dot com>
+# Copyright (c) 2014-2018 Michael Truog <mjtruog at protonmail dot com>
 # Copyright (c) 2009-2013 Dmitry Vasiliev <dima@hlabs.org>
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
@@ -70,7 +70,7 @@ end
 
 class ImproperListTestCase < Test::Unit::TestCase
     def test_improper_list
-        lst = Erlang::OtpErlangList.new([1, 2, 3, 4], improper=true)
+        lst = Erlang::OtpErlangList.new([1, 2, 3, 4], true)
         assert(lst.kind_of?(Erlang::OtpErlangList))
         assert_equal(Erlang::OtpErlangList.new([1, 2, 3, 4]).value, lst.value)
         assert_equal(4, lst.value[-1])
@@ -89,7 +89,7 @@ class ImproperListTestCase < Test::Unit::TestCase
     end
     def test_errors
         assert_raise(Erlang::OutputException){
-            Erlang::OtpErlangList.new('invalid', improper=true).binary
+            Erlang::OtpErlangList.new('invalid', true).binary
         }
     end
 end
